Support implementing portions of anaconda's post-install as %post scripts.
For now, all that's supported is copying screenshots.  However this could
be extended to other portions that really don't benefit from being in
python (restorecon, etc.).  Of course none of these scripts get run yet
given that we don't have any way to run the kickstart file, but once we
do we'll get this for free.

--- a/configure.ac
+++ b/configure.ac
@@ -309,6 +309,7 @@ AC_CONFIG_FILES([Makefile
                  tests/logpicker_test/logmining_test/Makefile
                  pyanaconda/textw/Makefile
                  data/ui/Makefile
+                 data/post-scripts/Makefile
                  utils/Makefile
                  utils/log_picker/Makefile
                  utils/log_picker/sending/Makefile])
