Move setfilecons code into a kickstart script, too.

--- a/data/post-scripts/Makefile.am
+++ b/data/post-scripts/Makefile.am
@@ -18,5 +18,5 @@
 # Author: Chris Lumens <clumens@redhat.com>
 
 postscriptsdir = $(datadir)/$(PACKAGE_NAME)/post-scripts
-dist_postscripts_DATA = 90-copy-screenshots.ks 95-copy-logs.ks
+dist_postscripts_DATA = 80-setfilecons.ks 90-copy-screenshots.ks 95-copy-logs.ks
 MAINTAINERCLEAFILES = Makefile.in
