--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -222,6 +222,18 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Tue Feb 28 2012 David Cantrell <dcantrell@redhat.com> - 13.21.155-1
+- Update the fs size limit for ext3/ext4 from 8TB to 16TB. (dlehman)
+  Resolves: rhbz#767727
+- Clean up obsolete extended partitions if partitioning fails. (dlehman)
+  Resolves: rhbz#725395
+- Yaboot cannot find /boot if it is on a logical partition. (dlehman)
+  Resolves: rhbz#725418
+- Add support for reserving space in lvm vgs via kickstart. (dlehman)
+  Resolves: rhbz#663647
+- Enforce lvm limit of 50 character name length for lvs, vgs. (dlehman)
+  Resolves: rhbz#747278
+
 * Mon Feb 27 2012 David Cantrell <dcantrell@redhat.com> - 13.21.154-1
 - Revert "Support XFS on all filesystems except /boot"
   Related: rhbz#766878
