move parse-kickstart.py back to parse-kickstart
rpmbuild wants to build .pyc/.pyo files for it, and we don't need/want
that.

--- a/dracut/Makefile.am
+++ b/dracut/Makefile.am
@@ -33,7 +33,7 @@ dist_dracut_SCRIPTS = module-setup.sh \
 		      anaconda-copy-ks.sh \
 		      fetch-kickstart-net \
 		      fetch-kickstart-disk \
-		      parse-kickstart.py
+		      parse-kickstart
 
 
 MAINTAINERCLEANFILES = Makefile.in
