replace pythondeps.sh with python-deps (python script)
python is better at figuring out python deps this way.

big thanks to bcl for showing me python's "modulefinder" module.

--- a/dracut/Makefile.am
+++ b/dracut/Makefile.am
@@ -19,7 +19,7 @@
 
 dracutdir = /usr/lib/dracut/modules.d/80$(PACKAGE_NAME)
 dist_dracut_SCRIPTS = module-setup.sh \
-                      pythondeps.sh \
+                      python-deps \
 		      anaconda-lib.sh \
 		      parse-anaconda-options.sh \
 		      parse-anaconda-repo.sh \
