add fedora-import-state.service (fix NFS root: #799989)
dracut writes out an ifcfg-ethX file and a dhclient lease file for the
interface used to mount the runtime. We need to pass that along to
NetworkManager so it won't bring down the interface we're using for our
root device.

This service copies the contents of the /run/initramfs/state directory
into its intended place, as would normally be done in fedora-readonly
for NFS readonly-root systems.

--- a/data/systemd/Makefile.am
+++ b/data/systemd/Makefile.am
@@ -18,5 +18,7 @@
 # Author: Chris Lumens <clumens@redhat.com>
 
 systemddir = /lib/systemd/system
-dist_systemd_DATA = anaconda-shell@.service anaconda.target anaconda.service instperf.service
+dist_systemd_DATA = anaconda-shell@.service anaconda.target anaconda.service instperf.service fedora-import-state.service
+systemdscriptdir = /lib/systemd
+dist_systemd_SCRIPTS = fedora-import-state
 MAINTAINERCLEANFILES = Makefile.in
