anaconda-shell service tweaks
following getty@.service, make sure we run the shell after plymouth
quits, etc.

--- a/data/systemd/anaconda-shell@.service
+++ b/data/systemd/anaconda-shell@.service
@@ -3,7 +3,7 @@
 [Unit]
 Description=Shell on %I
 BindTo=dev-%i.device
-After=dev-%i.device
+After=dev-%i.device systemd-user-sessions.service plymouth-quit-wait.service
 
 [Service]
 Environment=TERM=linux
