set ANACONDA=1 udev property in the right place
udev properties need to be set when udev is running. As it turns out,
that's basically what the pre-trigger hook exists for.

--- a/dracut/Makefile.am
+++ b/dracut/Makefile.am
@@ -26,6 +26,7 @@ dist_dracut_SCRIPTS = module-setup.sh \
 		      parse-anaconda-kickstart.sh \
 		      parse-anaconda-net.sh \
 		      repo-genrules.sh \
+		      anaconda-udevprop.sh \
 		      kickstart-genrules.sh \
 		      anaconda-netroot.sh \
 		      anaconda-diskroot \
